git-svn-id: svn://pjtools/cpan/trunk/Apache2-AuthenNTLM-Cookie@155 1f83a921-e71e-0410-9c46-8351bdb2f0e3

--- a/META.yml
+++ b/META.yml
@@ -10,6 +10,7 @@ resources:
 requires:
   Apache2::AuthenNTLM: 0
   Apache2::Cookie: 0
+  Apache2::Directive: 0
   Apache2::RequestRec: 0
   Digest::SHA1: 0
 build_requires:
